# Project4

./: Cargo.toml  README.md
assets/models/: cube_1.glb  cube_3.glb  enemy.glb
src/: bot.rs  camera.rs  main.rs  player.rs  world.rs
