[package]
name = "project4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }
bevy_rapier3d = "*"
bevy-inspector-egui = "=0.23.4"
rand = "0.8.5"
lazy_static = "1.4.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.rust-analyzer] 
rustc_private = true